--- a/youtube-quality.conf
+++ b/youtube-quality.conf
@@ -10,10 +10,10 @@ down_binding=DOWN
 select_binding=ENTER
 
 # formatting / cursors
-selected_and_active=▶ - 
-selected_and_inactive=● - 
-unselected_and_active=▷ - 
-unselected_and_inactive=○ - 
+selected_and_active=▶ -
+selected_and_inactive=● -
+unselected_and_active=▷ -
+unselected_and_inactive=○ -
 
 # font size scales by window, if false requires larger font and padding sizes
 scale_playlist_by_window=no
@@ -33,6 +33,9 @@ text_padding_y=5
 
 # how many seconds until the quality menu times out
 menu_timeout=10
+
+# how many items of the menu to display
+menu_items=5
 
 #use youtube-dl to fetch a list of available formats (overrides quality_strings)
 fetch_formats=yes
